# CommonCppDartCode

./: .gitignore  CMakeLists.txt  Common.h  CommonToDart.sed  Common_generated.dart  Generate.bat  Makefile  README.md
Messages/: Generate.bat  HyperCubeMessagesCommon.h  HyperCubeMessagesCommon_generated.dart  Messages.inc  MessagesCommon.h  MessagesCommonToDart.sed  MessagesInc_toDart.sed
cpp/: LLogger.cpp  LLogger.h  Logger.h  Messages.h  MsgExt.cpp  MsgExt.h  Packet.cpp  Packet.h  UUID.cpp  UUID.h  mserdes.cpp  mserdes.h  serdes.cpp  serdes.h
cpp/json/: githubUrl.txt
